kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-eov.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-dashboard
spec:
  hostnames: ["longhorn.${INTERNAL_SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: storage
          port: 80
